--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "swiper": "^11.1.4"
+    "swiper": "^11.1.4",
+    "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "postcss": "^8"
   }
 }
