Add Mongoose models for gallery, service, hero, testimonial, and footer; update package.json to include Ant Design

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.22.3",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^11.3.2",
     "jsonwebtoken": "^9.0.2",
